--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -26,7 +26,7 @@
   <div class="container with-top-search" style="min-height: 667px;" @touchmove="move">
     <div class="custom-search js-search-bar">
       <form>
-        <input type="search" class="custom-search-input" autocomplete="off" name="keyword" :value="keywords" placeholder="搜索更赞的商品" style="padding-left: 66px;">
+        <input type="search" class="custom-search-input" autocomplete="off" name="keyword" :value="keyword" placeholder="搜索更赞的商品" style="padding-left: 66px;">
         <span class="icon-custom-search"></span>
       </form>
       <button class="custom-search-type-selection-btn custom-search-type-selection-btn-focus">商品</button>
@@ -51,7 +51,10 @@
     <div class="search-content" style="display: none;"></div>
     <div class="content">
       <div class="search-wrap js-waterfull-wrap">
-        <ul class="js-list">
+        <ul class="js-list" 
+        v-infinite-scroll="getSearchLists"
+        infinite-scroll-disabled="loading"
+        infinite-scroll-distance="10">
           <li class="goods-item" v-for="list in searchLists">
             <a href="https://h5.youzan.com/v2/showcase/goods?alias=2755moo9i2r1c&amp;source=yzapp&amp;f_platform=yzapp">
               <div class="thumb">
@@ -68,7 +71,8 @@
             </a>
           </li>
         </ul>
-        <div class="list-finished">已经没有更多了</div>
+        <div class="loading-more" v-show="loading"><span></span></div>
+        <div class="list-finished" v-if="allLoaded">已经没有更多了</div>
       </div>
     </div>
     <div class="go-to-top" style="transform-origin: 0px 0px 0px; opacity: 1; transform: scale(1, 1);" v-show="isShow" @click="backTop"></div>
