--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -26,14 +26,15 @@
   <div class="container with-top-search" style="min-height: 667px;" @touchmove="move">
     <div class="custom-search js-search-bar">
       <form>
-        <input type="search" class="custom-search-input" autocomplete="off" name="keyword" :value="keyword" placeholder="搜索更赞的商品" style="padding-left: 66px;">
+        <input type="search" class="custom-search-input" autocomplete="off" name="keyword" :value="keyword" placeholder="搜索更赞的商品"
+          style="padding-left: 66px;">
         <span class="icon-custom-search"></span>
       </form>
       <button class="custom-search-type-selection-btn custom-search-type-selection-btn-focus">商品</button>
       <span class="cancel">取消</span>
       <div class="search-type-dropdown-menu" style="display: none;">
         <span class="search-type-dropdown-menu-indicator">
-            <i></i>
+          <i></i>
         </span>
         <div class="drop-menu-content">
           <div class="search-type-goods">
@@ -51,10 +52,7 @@
     <div class="search-content" style="display: none;"></div>
     <div class="content">
       <div class="search-wrap js-waterfull-wrap">
-        <ul class="js-list" 
-        v-infinite-scroll="getSearchLists"
-        infinite-scroll-disabled="loading"
-        infinite-scroll-distance="10">
+        <ul class="js-list" v-infinite-scroll="getSearchLists" infinite-scroll-disabled="loading" infinite-scroll-distance="1" id="scroll-wrapper">
           <li class="goods-item" v-for="list in searchLists">
             <a href="https://h5.youzan.com/v2/showcase/goods?alias=2755moo9i2r1c&amp;source=yzapp&amp;f_platform=yzapp">
               <div class="thumb">
@@ -71,7 +69,9 @@
             </a>
           </li>
         </ul>
-        <div class="loading-more" v-show="loading"><span></span></div>
+        <div class="loading-more" v-show="loading">
+          <span></span>
+        </div>
         <div class="list-finished" v-if="allLoaded">已经没有更多了</div>
       </div>
     </div>
