--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -54,7 +54,7 @@
       <div class="search-wrap js-waterfull-wrap">
         <ul class="js-list" v-infinite-scroll="getSearchLists" infinite-scroll-disabled="loading" infinite-scroll-distance="1" id="scroll-wrapper">
           <li class="goods-item" v-for="list in searchLists">
-            <a href="https://h5.youzan.com/v2/showcase/goods?alias=2755moo9i2r1c&amp;source=yzapp&amp;f_platform=yzapp">
+            <a :href="'goods.html?id='+list.id">
               <div class="thumb">
                 <img :src="list.image">
                 <i class="sell-out" v-if="list.isOut"></i>
