--- a/src/pages/goods/goods.html
+++ b/src/pages/goods/goods.html
@@ -170,7 +170,7 @@
           </div> -->
             <div id="right-icon" class="js-right-icon" v-show="isAddCart">
               <div class="js-right-icon-container right-icon-container clearfix">
-                <a id="global-cart" :href="'cart.html?id'+id" class="icon new s0" style="">
+                <a id="global-cart" :href="'cart.html?id='+id" class="icon new s0" style="">
                   <p class="icon-img"></p>
                   <p class="icon-txt">购物车</p>
                 </a>
