--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -29,7 +29,7 @@
           <div class="js-shop-list shop-list">
             <div class="block block-order block-cart" v-for="(shop,shopIndex) in cartLists">
               <div class="header">
-                <div class="select-group js-select-group" @click="selectGood(shop)"><span class="check" :class="{checked:shop.checked}"></span></div> <a class="shop-title"><i class="custom-store-img">店铺：</i>{{shop.shopTitle}}</a>
+                <div class="select-group js-select-group" @click="selectShop(shop)"><span class="check" :class="{checked:shop.checked}"></span></div> <a class="shop-title"><i class="custom-store-img">店铺：</i>{{shop.shopTitle}}</a>
                 <a href="javascript:;" data-type="cart" class="j-edit-list pull-right c-blue font-size-12 edit-list">
                   <!---->
                   编辑
@@ -40,7 +40,7 @@
                 <ul class="js-list block block-list block-list-cart border-0">
                   <li class="block-item block-item-cart" v-for="(good,index) in shop.goodsList">
                     <div>
-                      <div class="check-container" ><span class="check" :class="{checked:good.checked}" @click="selectGood(good)"></span></div>
+                      <div class="check-container" ><span class="check" :class="{checked:good.checked}" @click="selectGood(shop,good)"></span></div>
                       <div class="name-card clearfix">
                         <a href="https://h5.youzan.com/v2/showcase/goods?alias=2oivacpjh2ex0" class="thumb js-goods-link"><img data-src="https://img.yzcdn.cn/upload_files/2017/07/04/Fqp4EItsHaclmGQPBoMkR1qKmKGi.jpg!200x200.jpg" class="js-lazy" :src="good.image">
                           <!---->
@@ -116,18 +116,18 @@
               你需要分开结算每个店铺的商品哦~
             </div>
             <div class="bottom-cart clear-fix">
-              <div class="select-all"><span class="check"></span> 全选
+              <div class="select-all" @click="selectAll"><span class="check" :class="{checked:AllSelected}"></span> 全选
               </div>
               <!-- 显示状态 -->
-              <div class="total-price" style="display: none;">
+              <div class="total-price" >
                 合计：¥<span class="js-total-price" style="color: rgb(255, 102, 0);">684.99</span>
                 <p class="c-gray-dark">不含运费</p>
               </div>
-              <button href="javascript:;" class="js-go-pay btn btn-orange-dark font-size-14" style="display: none;">
+              <button href="javascript:;" class="js-go-pay btn btn-orange-dark font-size-14" >
                 结算 (3)
               </button>
               <!-- 编辑状态 -->
-              <button href="javascript:;" disabled="disabled" class="j-delete-goods btn font-size-14 btn-red" >删除
+              <button href="javascript:;" disabled="disabled" class="j-delete-goods btn font-size-14 btn-red" style="display: none;">删除
                     </button>
             </div>
           </div>
