--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -29,10 +29,12 @@
           <div class="js-shop-list shop-list">
             <div class="block block-order block-cart" v-for="(shop,shopIndex) in cartLists">
               <div class="header">
-                <div class="select-group js-select-group" @click="selectShop(shop)"><span class="check" :class="{checked:shop.checked}"></span></div> <a class="shop-title"><i class="custom-store-img">店铺：</i>{{shop.shopTitle}}</a>
-                <a href="javascript:;" data-type="cart" class="j-edit-list pull-right c-blue font-size-12 edit-list"
-                  @click="edit(shop,shopIndex)"
-                >
+                <div class="select-group js-select-group" @click="selectShop(shop)">
+                  <span class="check" :class="{checked:editingShop?shop.removeChecked:shop.checked}"></span>
+                </div>
+                <a class="shop-title">
+                  <i class="custom-store-img">店铺：</i>{{shop.shopTitle}}</a>
+                <a href="javascript:;" data-type="cart" class="j-edit-list pull-right c-blue font-size-12 edit-list" @click="edit(shop,shopIndex)">
                   <!---->
                   {{shop.editingMsg}}
                 </a>
@@ -42,18 +44,28 @@
                 <ul class="js-list block block-list block-list-cart border-0">
                   <li class="block-item block-item-cart" v-for="(good,index) in shop.goodsList" :class="{editing:shop.isEditing}">
                     <div>
-                      <div class="check-container" ><span class="check" :class="{checked:good.checked}" @click="selectGood(shop,good)"></span></div>
+                      <div class="check-container">
+                        <span class="check" :class="{checked:editingShop?good.removeChecked:good.checked}" @click="selectGood(shop,good)"></span>
+                      </div>
                       <div class="name-card clearfix">
-                        <a href="https://h5.youzan.com/v2/showcase/goods?alias=2oivacpjh2ex0" class="thumb js-goods-link"><img data-src="https://img.yzcdn.cn/upload_files/2017/07/04/Fqp4EItsHaclmGQPBoMkR1qKmKGi.jpg!200x200.jpg" class="js-lazy" :src="good.image">
+                        <a href="https://h5.youzan.com/v2/showcase/goods?alias=2oivacpjh2ex0" class="thumb js-goods-link">
+                          <img data-src="https://img.yzcdn.cn/upload_files/2017/07/04/Fqp4EItsHaclmGQPBoMkR1qKmKGi.jpg!200x200.jpg"
+                            class="js-lazy" :src="good.image">
                           <!---->
                         </a>
-                        <div class="detail"><a href="javascript:;" class="js-goods-link"><h3 class="title js-ellipsis"><i>{{good.title}}</i></h3></a>
+                        <div class="detail">
+                          <a href="javascript:;" class="js-goods-link">
+                            <h3 class="title js-ellipsis">
+                              <i>{{good.title}}</i>
+                            </h3>
+                          </a>
                           <p class="sku ellipsis">
                             {{good.sku}}
                           </p>
                           <!-- 显示状态 -->
                           <div class="num" v-show="!shop.isEditing">
-                            ×<span class="num-txt">{{good.number}}</span>
+                            ×
+                            <span class="num-txt">{{good.number}}</span>
                             <!---->
                           </div>
                           <!-- 编辑状态 -->
@@ -68,11 +80,15 @@
                             </div>
                           </div>
                           <div class="price c-orange">
-                            ¥<span>{{good.price | twoDecimal}} </span></div>
+                            ¥
+                            <span>{{good.price | twoDecimal}} </span>
+                          </div>
                         </div>
                         <div class="error-box"></div>
                       </div>
-                      <div class="delete-btn"><span>删除</span></div>
+                      <div class="delete-btn">
+                        <span>删除</span>
+                      </div>
                     </div>
                   </li>
                 </ul>
@@ -87,24 +103,36 @@
               <ul class="block border-0 invalid-list js-invalid-list">
                 <li class="block-item block-item-cart error">
                   <div index="0">
-                    <div class="check-container hide"><span class="check"></span></div>
+                    <div class="check-container hide">
+                      <span class="check"></span>
+                    </div>
                     <div class="name-card clearfix">
-                      <a href="https://h5.youzan.com/v2/showcase/goods?alias=36co1k2m80lmu" class="thumb js-goods-link"><img data-src="https://img.yzcdn.cn/upload_files/2017/06/29/FstNOp77JZHQjZIDFd5LlZYE3j_j.jpg!200x200.jpg" class="js-lazy" src="https://img.yzcdn.cn/upload_files/2017/06/29/FstNOp77JZHQjZIDFd5LlZYE3j_j.jpg?imageView2/2/w/200/h/200/q/75/format/webp">
+                      <a href="https://h5.youzan.com/v2/showcase/goods?alias=36co1k2m80lmu" class="thumb js-goods-link">
+                        <img data-src="https://img.yzcdn.cn/upload_files/2017/06/29/FstNOp77JZHQjZIDFd5LlZYE3j_j.jpg!200x200.jpg"
+                          class="js-lazy" src="https://img.yzcdn.cn/upload_files/2017/06/29/FstNOp77JZHQjZIDFd5LlZYE3j_j.jpg?imageView2/2/w/200/h/200/q/75/format/webp">
                         <!---->
                       </a>
-                      <div class="detail"><a href="https://h5.youzan.com/v2/showcase/goods?alias=36co1k2m80lmu" class="js-goods-link"><h3 class="title js-ellipsis"><i>国际安徒生奖大奖书系（文学作品系列第二辑 共8册） 国际安徒生奖获奖书系 是经过IBBY各国分会和丛书主编、著名儿童文学理论家方卫平教授层层筛选产生的经典佳作</i></h3></a>
+                      <div class="detail">
+                        <a href="https://h5.youzan.com/v2/showcase/goods?alias=36co1k2m80lmu" class="js-goods-link">
+                          <h3 class="title js-ellipsis">
+                            <i>国际安徒生奖大奖书系（文学作品系列第二辑 共8册） 国际安徒生奖获奖书系 是经过IBBY各国分会和丛书主编、著名儿童文学理论家方卫平教授层层筛选产生的经典佳作</i>
+                          </h3>
+                        </a>
                         <p class="sku ellipsis">
                           下周二发货
                         </p>
                         <div class="num">
-                          ×<span class="num-txt">1</span>
+                          ×
+                          <span class="num-txt">1</span>
                           <!---->
                         </div>
                         <!---->
                       </div>
                       <div class="error-box">商品已售罄</div>
                     </div>
-                    <div class="delete-btn"><span>删除</span></div>
+                    <div class="delete-btn">
+                      <span>删除</span>
+                    </div>
                   </div>
                 </li>
               </ul>
@@ -118,19 +146,21 @@
               你需要分开结算每个店铺的商品哦~
             </div>
             <div class="bottom-cart clear-fix">
-              <div class="select-all" @click="selectAll"><span class="check" :class="{checked:AllSelected}"></span> 全选
+              <div class="select-all" @click="selectAll">
+                <span class="check" :class="{checked:editingShop?allRemoveSelected:allSelected}"></span> 全选
               </div>
               <!-- 显示状态 -->
-              <div class="total-price" >
-                合计：¥<span class="js-total-price" style="color: rgb(255, 102, 0);">{{total | twoDecimal}}</span>
+              <div class="total-price" v-show="!editingShop">
+                合计：¥
+                <span class="js-total-price" style="color: rgb(255, 102, 0);">{{total | twoDecimal}}</span>
                 <p class="c-gray-dark">不含运费</p>
               </div>
-              <button href="javascript:;" class="js-go-pay btn btn-orange-dark font-size-14" :disabled="!selectedGoods.length">
+              <button href="javascript:;" class="js-go-pay btn btn-orange-dark font-size-14" :disabled="!selectedGoods.length" v-show="!editingShop">
                 结算 ({{selectedGoods.length}})
               </button>
               <!-- 编辑状态 -->
               <button href="javascript:;" disabled="disabled" class="j-delete-goods btn font-size-14 btn-red" v-show="editingShop">删除
-                    </button>
+              </button>
             </div>
           </div>
         </div>
@@ -140,7 +170,8 @@
   <div class="footer" style="min-height: 86px;">
     <div class="copyright">
       <div class="ft-copyright " style="background-image: url(https://img.yzcdn.cn/upload_files/2016/11/15/147918630760182374.png);">
-        <a class="yz-logo" href="https://www.youzan.com/?from_source=support_logo">有赞提供技术支持</a> </div>
+        <a class="yz-logo" href="https://www.youzan.com/?from_source=support_logo">有赞提供技术支持</a>
+      </div>
     </div>
   </div>
 </body>
