--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -42,7 +42,7 @@
               <!---->
               <div>
                 <ul class="js-list block block-list block-list-cart border-0">
-                  <li class="block-item block-item-cart" v-for="(good,index) in shop.goodsList" :class="{editing:shop.isEditing}">
+                  <li class="block-item block-item-cart" v-for="(good,goodIndex) in shop.goodsList" :class="{editing:shop.isEditing}">
                     <div>
                       <div class="check-container">
                         <span class="check" :class="{checked:editingShop?good.removeChecked:good.checked}" @click="selectGood(shop,good)"></span>
@@ -86,7 +86,7 @@
                         </div>
                         <div class="error-box"></div>
                       </div>
-                      <div class="delete-btn">
+                      <div class="delete-btn" @click="remove(good,goodIndex,shop,shopIndex)">
                         <span>删除</span>
                       </div>
                     </div>
@@ -166,6 +166,20 @@
         </div>
       </div>
     </div>
+    <div id="0SuefKPV4p" v-show="removePopout" style="height: 100%; position: fixed; top: 0px; left: 0px; right: 0px; background-color: rgba(0, 0, 0, 0.7); z-index: 1000;  opacity: 1;"></div>
+    <div id="d2tfiX27YS" v-show="removePopout" class="popout-confirm popout-box" style="overflow: hidden; position: absolute; z-index: 1000; top: 50%; left: 50%; transform: translate3d(-50%, -50%, 0px); visibility: visible; border-radius: 4px; background: white; width: 270px; padding: 15px; opacity: 1;">
+      <div class="confirm-content font-size-14" style="line-height: 20px; padding: 5px 5px 10px;">
+          要删除吗？
+      </div>
+      <hr style="margin: 9px -15px 10px;">
+      <div class="btn-2-1" style="width: 47.5%;">
+          <p class="js-cancel center font-size-16" style="padding-top: 5px;" @click="removePopout = false">取消</p>
+      </div>
+      <div class="btn-2-1" style="width: 47.5%;">
+          <p class="js-ok center c-green font-size-16" style="padding-top: 5px;" @click="removeConfirm">确定</p>
+      </div>
+    </div>
+  </div>
   </div>
   <!-- <div class="footer" style="min-height: 86px;">
     <div class="copyright">
