--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -159,21 +159,21 @@
                 结算 ({{selectedGoods.length}})
               </button>
               <!-- 编辑状态 -->
-              <button href="javascript:;" :disabled="!removeGoods.length" class="j-delete-goods btn font-size-14 btn-red" v-show="editingShop">删除
+              <button href="javascript:;" :disabled="!removeGoods.length" class="j-delete-goods btn font-size-14 btn-red" v-show="editingShop" @click="removeSelected">删除
               </button>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div id="0SuefKPV4p" v-show="removePopout" style="height: 100%; position: fixed; top: 0px; left: 0px; right: 0px; background-color: rgba(0, 0, 0, 0.7); z-index: 1000;  opacity: 1;"></div>
-    <div id="d2tfiX27YS" v-show="removePopout" class="popout-confirm popout-box" style="overflow: hidden; position: absolute; z-index: 1000; top: 50%; left: 50%; transform: translate3d(-50%, -50%, 0px); visibility: visible; border-radius: 4px; background: white; width: 270px; padding: 15px; opacity: 1;">
+    <div id="0SuefKPV4p" v-show="removePopup" style="height: 100%; position: fixed; top: 0px; left: 0px; right: 0px; background-color: rgba(0, 0, 0, 0.7); z-index: 1000;  opacity: 1;"></div>
+    <div id="d2tfiX27YS" v-show="removePopup" class="popout-confirm popout-box" style="overflow: hidden; position: absolute; z-index: 1000; top: 50%; left: 50%; transform: translate3d(-50%, -50%, 0px); visibility: visible; border-radius: 4px; background: white; width: 270px; padding: 15px; opacity: 1;">
       <div class="confirm-content font-size-14" style="line-height: 20px; padding: 5px 5px 10px;">
-          要删除吗？
+          {{removeMsg}}
       </div>
       <hr style="margin: 9px -15px 10px;">
       <div class="btn-2-1" style="width: 47.5%;">
-          <p class="js-cancel center font-size-16" style="padding-top: 5px;" @click="removePopout = false">取消</p>
+          <p class="js-cancel center font-size-16" style="padding-top: 5px;" @click="removePopup = false">取消</p>
       </div>
       <div class="btn-2-1" style="width: 47.5%;">
           <p class="js-ok center c-green font-size-16" style="padding-top: 5px;" @click="removeConfirm">确定</p>
